# ralph

./: .cursorrules  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  ralph.sh
.claude/skills/push/: SKILL.md
.claude/skills/rebase/: SKILL.md
.github/workflows/: release.yml
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: main.rs  update_check.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/src/: discovery.rs  events.rs  lib.rs
crates/ralph-core/src/git/: mod.rs  ops.rs  retry.rs
crates/ralph-core/src/provider/: claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs
crates/ralph-core/src/session/: log_store.rs  machine.rs  manager.rs  mod.rs  persist.rs  runner.rs  state.rs  view.rs
scripts/: notarize.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  path_env.rs  settings.rs
src/components/: ControlBar.tsx  LogView.tsx  NewSessionDialog.tsx  RecoveryDialog.tsx  SessionList.tsx  SessionPanel.tsx  SettingsDialog.tsx  StatusBar.tsx  UpdateBanner.tsx
src/components/layouts/: SidebarLayout.tsx  SplitLayout.tsx  TabsLayout.tsx
src/hooks/: useAppUpdate.ts  useDiscovery.ts  useSession.ts  useSessions.tsx
src/lib/: commands.ts  events.ts  paths.test.ts  paths.ts  types.ts
src/styles/: globals.css
