[package]
name = "ralph-desktop"
version = "0.2.9"
description = "Ralph - Autonomous Coding Loop GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "ralph_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ralph-core = { path = "../crates/ralph-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
which = "7"

