[package]
name = "ralph-cli"
version = "0.2.9"
edition = "2021"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
ralph-core = { path = "../ralph-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
